project(test_otterbrix)

add_definitions(-DDEV_MODE)

set( ${PROJECT_NAME}_SOURCES
        test_instances.cpp
        test_collection.cpp
        test_collection_logical_plan.cpp
        test_collection_sql.cpp
        test_index.cpp
        test_insert.cpp
        test_disk_index.cpp
        test_wal_pool.cpp
        test_persistence.cpp
        test_sql_features.cpp
        test_production_scenarios.cpp
        test_join.cpp
        test_connections.cpp
        test_udfs.cpp
        test_batch_execution.cpp
        test_arithmetic.cpp
)

add_executable(${PROJECT_NAME} main.cpp ${${PROJECT_NAME}_SOURCES})

target_link_libraries(
        ${PROJECT_NAME} PRIVATE

        cpp_otterbrix

        otterbrix::test_generaty
        otterbrix::log
        otterbrix::cursor
        otterbrix::session
        otterbrix::services
        otterbrix::locks

        spdlog::spdlog
        msgpackc-cxx
        #CONAN_PKG::date
        Catch2::Catch2
        absl::crc32c
        absl::int128
        benchmark::benchmark
        actor-zeta::actor-zeta
        Boost::boost
        fmt::fmt
        #CONAN_PKG::libcurl
        ZLIB::ZLIB
        BZip2::BZip2
        #libbacktrace::libbacktrace

)

include(CTest)
include(Catch)
catch_discover_tests(${PROJECT_NAME} PROPERTIES TIMEOUT 1800)

# Profiling binary for arithmetic
add_executable(profile_arithmetic profile_arithmetic.cpp)
target_link_libraries(profile_arithmetic PRIVATE
        cpp_otterbrix
        otterbrix::test_generaty
        otterbrix::log
        otterbrix::cursor
        otterbrix::session
        otterbrix::services
        otterbrix::locks
        spdlog::spdlog
        msgpackc-cxx
        Catch2::Catch2
        absl::crc32c
        absl::int128
        benchmark::benchmark
        actor-zeta::actor-zeta
        Boost::boost
        fmt::fmt
        ZLIB::ZLIB
        BZip2::BZip2
)
