[package]
name = "seaorm-otterbrix"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true
description = "SeaORM proxy backend for Otterbrix"
license = "BSD-3-Clause"

[dependencies]
async-trait = "0.1.89"
log = { version = "0.4", default-features = false }
otterbrix = { version = "0.1.0", path = "../otterbrix" }
parking_lot = "0.12"
sea-orm = { version = "1.1.20", default-features = false, features = ["proxy", "runtime-tokio-rustls"] }
tokio = { version = "1", default-features = false, features = ["rt", "macros"] }

[dev-dependencies]
sea-orm = { version = "1.1.20", default-features = false, features = ["proxy", "runtime-tokio-rustls", "macros", "with-json"] }
tempfile = "3"
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "macros"] }
